tests/lib_declaration_merging/test_node_modules.js
// @flow

import {Foo} from 'foo'

declare var foo: Foo;

foo.a;

// Doesn't work since Node.js modules are orthogonal to `declare module`
foo.b; // error
